--- a/index.html
+++ b/index.html
@@ -13,69 +13,217 @@
     <div class="limiter">
         <header class="header">
             <div class="logo">
-                <h1 class="logo-nombre">Manuel Álvarez</h1>
-                <span>Frontend Developer</span>
+                <h1 class="logo-name">Manuel Álvarez</h1>
+                <span class="logo-profession">Frontend Developer</span>
             </div>
             <nav>
                 <ul class="menu">
-                    <li class="menu-item"><a href="">Inicio</a></li>
-                    <li class="menu-item"><a href="">Acerca de</a></li>
-                    <li class="menu-item"><a href="">Contacto</a></li>
+                    <li class="menu-item"><a href="index.html">Inicio</a></li>
+                    <li class="menu-item"><a href="about.html">Acerca de</a></li>
+                    <li class="menu-item"><a href="contact.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
         <div class="container">
             <div class="sidenav">
                 <ul class="sidenav-list">
-                    <li class="sidenav-list__item"><a href="">Todo</a></li>
-                    <li class="sidenav-list__item"><a href="">Design</a></li>
-                    <li class="sidenav-list__item"><a href="">Css3</a></li>
-                    <li class="sidenav-list__item"><a href="">Javascript</a></li>
-                    <li class="sidenav-list__item"><a href="">Angular</a></li>
-                    <li class="sidenav-list__item"><a href="">React</a></li>
+                    <li class="sidenav-list__item"><a href="#todos">Todo</a></li>
+                    <li class="sidenav-list__item"><a href="#design">Design</a></li>
+                    <li class="sidenav-list__item"><a href="#css3">Css3</a></li>
+                    <li class="sidenav-list__item"><a href="#javascript">Javascript</a></li>
+                    <li class="sidenav-list__item"><a href="#angular">Angular</a></li>
+                    <li class="sidenav-list__item"><a href="#react">React</a></li>
                 </ul>
             </div>
-            <div class="main">
-                <div class="project">
-                    <div class="card">
-                        <img class="img-card" src="assets/images/evento01.jpg" alt="project">
-                        <div class="card-title">Platzi Store</div>
-                        <div class="card-subtitle">Angular</div>
+            <div class="main" id="todos">
+                <div class="flex" id="design">
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Landing01</div>
+                                <div class="card-subtitle">Design</div>
+                                <img class="card-img" src="assets/images/landing.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Landing02</div>
+                                <div class="card-subtitle">Design</div>
+                                <img class="card-img" src="assets/images/landing.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Landing03</div>
+                                <div class="card-subtitle">Design</div>
+                                <img class="card-img" src="assets/images/landing.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Landing04</div>
+                                <div class="card-subtitle">Design</div>
+                                <img class="card-img" src="assets/images/landing.jpg" alt="project">
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="project">
-                    <div class="card">
-                        <img class="img-card" src="assets/images/evento01.jpg" alt="project">
-                        <div class="card-title">Platzi Store</div>
-                        <div class="card-subtitle">Angular</div>
+                <div class="flex" id="css3">
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Animación01</div>
+                                <div class="card-subtitle">Css3</div>
+                                <img class="card-img" src="assets/images/css3.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Animación02</div>
+                                <div class="card-subtitle">Css3</div>
+                                <img class="card-img" src="assets/images/css3.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Animación03</div>
+                                <div class="card-subtitle">Css3</div>
+                                <img class="card-img" src="assets/images/css3.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Animación04</div>
+                                <div class="card-subtitle">Css3</div>
+                                <img class="card-img" src="assets/images/css3.jpg" alt="project">
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="project">
-                    <div class="card">
-                        <img class="img-card" src="assets/images/evento01.jpg" alt="project">
-                        <div class="card-title">Platzi Store</div>
-                        <div class="card-subtitle">Angular</div>
+                <div class="flex" id="javascript">
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Fetch</div>
+                                <div class="card-subtitle">Javascript</div>
+                                <img class="card-img" src="assets/images/javascript.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Fetch</div>
+                                <div class="card-subtitle">Javascript</div>
+                                <img class="card-img" src="assets/images/javascript.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Fetch</div>
+                                <div class="card-subtitle">Javascript</div>
+                                <img class="card-img" src="assets/images/javascript.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Fetch</div>
+                                <div class="card-subtitle">Javascript</div>
+                                <img class="card-img" src="assets/images/javascript.jpg" alt="project">
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="project">
-                    <div class="card">
-                        <img class="img-card" src="assets/images/evento01.jpg" alt="project">
-                        <div class="card-title">Platzi Store</div>
-                        <div class="card-subtitle">Angular</div>
+                <div class="flex" id="angular">
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Platzi Store</div>
+                                <div class="card-subtitle">Angular</div>
+                                <img class="card-img" src="assets/images/angular.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Platzi Store</div>
+                                <div class="card-subtitle">Angular</div>
+                                <img class="card-img" src="assets/images/angular.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Platzi Store</div>
+                                <div class="card-subtitle">Angular</div>
+                                <img class="card-img" src="assets/images/angular.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Platzi Store</div>
+                                <div class="card-subtitle">Angular</div>
+                                <img class="card-img" src="assets/images/angular.jpg" alt="project">
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="project">
-                    <div class="card">
-                        <img class="img-card" src="assets/images/evento01.jpg" alt="project">
-                        <div class="card-title">Platzi Store</div>
-                        <div class="card-subtitle">Angular</div>
+                <div class="flex" id="react">
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Platzi Video</div>
+                                <div class="card-subtitle">React</div>
+                                <img class="card-img" src="assets/images/react.jpg" alt="project">
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="project">
-                    <div class="card">
-                        <img class="img-card" src="assets/images/evento01.jpg" alt="project">
-                        <div class="card-title">Platzi Store</div>
-                        <div class="card-subtitle">Angular</div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Platzi Video</div>
+                                <div class="card-subtitle">React</div>
+                                <img class="card-img" src="assets/images/react.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Platzi Video</div>
+                                <div class="card-subtitle">React</div>
+                                <img class="card-img" src="assets/images/react.jpg" alt="project">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="card">
+                            <a href="#">
+                                <div class="card-title">Platzi Video</div>
+                                <div class="card-subtitle">React</div>
+                                <img class="card-img" src="assets/images/react.jpg" alt="project">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
