--- a/about.html
+++ b/about.html
@@ -5,11 +5,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Acerca de manuelalvarez</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+
+    <title>manuelalvarezco</title>
 </head>
 
 <body>
-    <h1>Acerca de ..</h1>
+    <div class="limiter">
+        <header class="header">
+            <div class="logo">
+                <h1 class="logo-name">Manuel Álvarez</h1>
+                <span class="logo-profession">Frontend Developer</span>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="index.html">Inicio</a></li>
+                    <li class="menu-item"><a href="about.html">Acerca de</a></li>
+                    <li class="menu-item"><a href="contact.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="content">
+            <h2 class="titulo mt-10">Hola!</h2>
+            <div class="caja">
+                <p>Soy Manuel Álvarez, desarrollador web apasionado por el desarrollo frontend. Actualmente estudiante de ingeniería informática en la universidad nacional de la rioja UNIR he realizado diferentes cursos mediante plataformas de aprendizajes
+                    como Udemy, Platzi, Codecademy, freecodecamp entre otros.</p>
+            </div>
+
+            <div class="content-images">
+                <div class="img01">
+
+                    <img width="254" src="assets/images/manu01.png" alt="manuel-alvarez">
+                </div>
+                <div class="img02">
+                    <img width="321" src="assets/images/manuel-react.png" alt="manuel-alvarez">
+                </div>
+            </div>
+        </section>
+
+        <section class="certificates">
+            <h2 class="titulo">Certificados</h2>
+            <div class="caja">
+                <p>Los cursos que he realizado son enfocados al desarrollo Frontend, siempre me ha apasionado la interacción que pueden tener los usuarios con los productos digitales y he decidido afrontar el reto de crear y mejorar la experiencia de los
+                    usuarios en las aplicaciones que he desarrollado.</p>
+            </div>
+            <article class="slider">
+                <div class="swiper-container">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <a href="" class="swiper-slide">
+                            <img width="340px" src="assets/images/Curso-Angular.PNG" alt="" class="swiper-slide">
+                        </a>
+                        <a href="" class="swiper-slide">
+                            <img width="340px" src="assets/images/curso-jquery-javascript.PNG" alt="" class="swiper-slide">
+                        </a>
+                        <a href="" class="swiper-slide">
+                            <img width="340px" src="assets/images/Frontend-Developer.png" alt="" class="swiper-slide">
+                        </a>
+                        <a href="" class="swiper-slide">
+                            <img width="340px" src="assets/images/curso-profesional-javascript.png" alt="" class="swiper-slide">
+                        </a>
+                        <a href="" class="swiper-slide">
+                            <img width="340px" src="assets/images/fundamentos-javascript.PNG" alt="" class="swiper-slide">
+                        </a>
+                        <a href="" class="swiper-slide">
+                            <img width="340px" src="assets/images/Desarrollo-Web-Online.PNG" alt="" class="swiper-slide">
+                        </a>
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+
+
+            </article>
+        </section>
+
+        <footer class="footer">
+            footer
+        </footer>
+    </div>
+
+    <script src="https://unpkg.com/swiper/js/swiper.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="assets/js/about.js"></script>
 </body>
 
 </html>
