--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li class="sidenav-list__item"><a href="#javascript">Javascript</a></li>
                     <li class="sidenav-list__item"><a href="#angular">Angular</a></li>
                     <li class="sidenav-list__item"><a href="#react">React</a></li>
+                    <li class="sidenav-list__item"><a href="#react">Node</a></li>
                 </ul>
             </div>
             <div class="main" id="todos">
