--- a/about.html
+++ b/about.html
@@ -58,22 +58,25 @@
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
                         <a href="" class="swiper-slide">
-                            <img width="340px" src="assets/images/Curso-Angular.PNG" alt="" class="swiper-slide">
+                            <img width="340px" src="assets/images/Curso-Angular.PNG" alt="Certificado" class="swiper-slide">
                         </a>
-                        <a href="" class="swiper-slide">
-                            <img width="340px" src="assets/images/curso-jquery-javascript.PNG" alt="" class="swiper-slide">
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/curso-jquery-javascript.PNG" alt="Certificado" class="swiper-slide">
                         </a>
-                        <a href="" class="swiper-slide">
-                            <img width="340px" src="assets/images/Frontend-Developer.png" alt="" class="swiper-slide">
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/Frontend-Developer.png" alt="Certificado" class="swiper-slide">
                         </a>
-                        <a href="" class="swiper-slide">
-                            <img width="340px" src="assets/images/curso-profesional-javascript.png" alt="" class="swiper-slide">
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/curso-profesional-javascript.png" alt="Certificado" class="swiper-slide">
                         </a>
-                        <a href="" class="swiper-slide">
-                            <img width="340px" src="assets/images/fundamentos-javascript.PNG" alt="" class="swiper-slide">
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/fundamentos-javascript.PNG" alt="Certificado" class="swiper-slide">
                         </a>
-                        <a href="" class="swiper-slide">
-                            <img width="340px" src="assets/images/Desarrollo-Web-Online.PNG" alt="" class="swiper-slide">
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/Desarrollo-Web-Online.PNG" alt="Certificado" class="swiper-slide">
+                        </a>
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/buenas-practicas-desarollo.PNG" alt="Certificado" class="swiper-slide">
                         </a>
                     </div>
                     <!-- If we need pagination -->
