--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="sidenav">
                 <ul class="sidenav-list">
                     <li class="sidenav-list__item"><a href="#todos">Todo</a></li>
-                    <li class="sidenav-list__item"><a href="#design">Design</a></li>
+                    <li class="sidenav-list__item"><a href="#design">UX-UI</a></li>
                     <li class="sidenav-list__item"><a href="#css3">Css3</a></li>
                     <li class="sidenav-list__item"><a href="#javascript">Javascript</a></li>
                     <li class="sidenav-list__item"><a href="#angular">Angular</a></li>
