curso profesional de javascript

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                             <img width="340px" src="assets/images/Frontend-Developer.png" alt="Certificado" class="swiper-slide">
                         </a>
                         <a href="#" class="swiper-slide">
-                            <img width="340px" src="assets/images/curso-profesional-javascript.PNG" alt="Certificado" class="swiper-slide">
+                            <img width="340px" src="assets/images/profesional-javascript.png" alt="Certificado" class="swiper-slide">
                         </a>
                         <a href="#" class="swiper-slide">
                             <img width="340px" src="assets/images/fundamentos-javascript.PNG" alt="Certificado" class="swiper-slide">
