añadiento los colores

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
             <section class="information">
                 <h2 class="titulo">Hagamos algo juntos</h2>
-                <p class="subtitulo">La ilusión de participar en proyectos colaborativos siempre me ha llamado mucho la atención, aunque nunca he tenido la oportunidad de ayudar en alguno siempre voy a estar abierto a estos retos, si tienes algún proyecto en el que te pueda
+                <p>La ilusión de participar en proyectos colaborativos siempre me ha llamado mucho la atención, aunque nunca he tenido la oportunidad de ayudar en alguno siempre voy a estar abierto a estos retos, si tienes algún proyecto en el que te pueda
                     ayudar no dudes en escribirme.</p>
                 <img width="470" src="assets/images/trabajemos.png" alt="trabajemos-juntos">
             </section>
