responsive del index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class="limiter">
+
         <header class="header">
             <div class="logo">
                 <h1 class="logo-name">Manuel Álvarez</h1>
@@ -26,7 +27,9 @@
                 </ul>
             </nav>
         </header>
+
         <div class="container">
+
             <div class="sidenav">
                 <ul class="sidenav-list">
                     <li class="sidenav-list__item"><a href="#todos">Todo</a></li>
@@ -38,7 +41,9 @@
                     <li class="sidenav-list__item"><a href="#react">Node</a></li>
                 </ul>
             </div>
+
             <div class="main" id="todos">
+                <h2 class="projects">Proyectos</h2>
                 <div class="flex" id="design">
                     <div class="project">
                         <div class="card">
@@ -230,10 +235,13 @@
                     </div>
                 </div>
             </div>
+
         </div>
+        <!--
         <footer class="footer">
             footer
         </footer>
+        -->
     </div>
 </body>
 
