--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,10 @@
                 <h2 class="titulo">Hagamos algo juntos</h2>
                 <p>La ilusión de participar en proyectos colaborativos siempre me ha llamado mucho la atención, aunque nunca he tenido la oportunidad de ayudar en alguno siempre voy a estar abierto a estos retos, si tienes algún proyecto en el que te pueda
                     ayudar no dudes en escribirme.</p>
-                <img width="470" src="assets/images/trabajemos.png" alt="trabajemos-juntos">
+
             </section>
             <section class="formulario">
+                <img class="formulario-image" src="assets/images/trabajemos.png" alt="trabajemos-juntos">
                 <form class="form">
                     <div class="form-group">
                         <label for="nombre">Nombre</label>
@@ -48,7 +49,7 @@
                     </div>
                     <div class="form-group">
                         <label for="mensaje">Mensaje</label>
-                        <textarea class="textarea-group" name="mensaje" id="mensaje" cols="44" rows="8"></textarea>
+                        <textarea class="textarea-group" name="mensaje" id="mensaje" rows="8"></textarea>
                     </div>
                     <div class="group-terminos">
                         <div class="item-termino">
