--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
         </header>
-        <div class="container">
+        <div class="container-contact">
 
             <section class="information">
                 <h2 class="titulo">Hagamos algo juntos</h2>
