--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
         </section>
 
         <footer class="footer">
-            footer
+            <p>@manuelalvarezco</p>
         </footer>
     </div>
 
