--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
 
         </div>
 
-        <!--
+
         <footer class="footer">
-            footer
+            <p>@manuelalvarezco</p>
         </footer>
-        -->
+
     </div>
 </body>
 
