--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         </div>
 
         <footer class="footer">
-            footer
+            <p>@manuelalvarezco</p>
         </footer>
     </div>
 
