--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <div class="container">
 
+            <i class="icon-menu burger-menu" id="burger-menu"></i>
             <div class="sidenav">
                 <ul class="sidenav-list">
                     <li class="sidenav-list__item"><a href="#todos">Todo</a></li>
@@ -41,6 +42,8 @@
                     <li class="sidenav-list__item"><a href="#react">Node</a></li>
                 </ul>
             </div>
+
+
 
             <div class="main" id="todos">
                 <h2 class="projects">Proyectos</h2>
@@ -244,6 +247,8 @@
         </footer>
 
     </div>
+
+    <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
