--- a/about.html
+++ b/about.html
@@ -78,6 +78,18 @@
                         <a href="#" class="swiper-slide">
                             <img width="340px" src="assets/images/buenas-practicas-desarollo.PNG" alt="Certificado" class="swiper-slide">
                         </a>
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/diseno-interfaces-UX.PNG" alt="Certificado" class="swiper-slide">
+                        </a>
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/responsive-design.PNG" alt="Certificado" class="swiper-slide">
+                        </a>
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/introduccion-diseno.png" alt="Certificado" class="swiper-slide">
+                        </a>
+                        <a href="#" class="swiper-slide">
+                            <img width="340px" src="assets/images/programacion-basica.PNG" alt="Certificado" class="swiper-slide">
+                        </a>
                     </div>
                     <!-- If we need pagination -->
                     <div class="swiper-pagination"></div>
